feat: Enhance HTML metadata and add new web app page for EMRS Control Hub

--- a/admin.html
+++ b/admin.html
@@ -9,16 +9,24 @@
     content="EMRS Admin Console by EllowDigital. Manage registrations, sync Google Sheets, and export attendee insights from any device." />
   <meta name="keywords"
     content="EMRS admin, EllowDigital, event registration dashboard, attendee management, google sheets sync" />
+  <meta name="author" content="EllowDigital" />
+  <meta name="robots" content="noindex, nofollow" />
+  <link rel="canonical" href="https://get-epass.netlify.app/admin.html" />
+  <meta property="og:title" content="EMRS Admin Console – EllowDigital" />
   <meta property="og:description"
     content="Manage registrations, sync Google Sheets, and export attendee insights in the EMRS Admin Console." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://get-epass.netlify.app/admin.html" />
-  <meta property="og:image" content="https://get-epass.netlify.app/assets/favicon/android-chrome-512x512.png" />
+  <meta property="og:site_name" content="EMRS by EllowDigital" />
+  <meta property="og:locale" content="en_IN" />
+  <meta property="og:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta property="og:image:alt" content="EMRS admin console overview" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="EMRS Admin Console – EllowDigital" />
   <meta name="twitter:description"
     content="Manage registrations, sync Google Sheets, and export attendee insights in the EMRS Admin Console." />
-  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/favicon/android-chrome-512x512.png" />
+  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta name="twitter:image:alt" content="EMRS admin console overview" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#0a2540" />
   <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
