--- a/case-study-tent-decor-expo.html
+++ b/case-study-tent-decor-expo.html
@@ -9,12 +9,59 @@
       name="description"
       content="Discover how EllowDigital EMRS powered the Tent Decor Expo UP 2025 with streamlined registrations, onboarding, and entry management."
     />
+    <meta
+      name="keywords"
+      content="Tent Decor Expo case study, EllowDigital EMRS, event registration success story, visitor management"
+    />
     <meta name="author" content="EllowDigital" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://get-epass.netlify.app/case-study-tent-decor-expo.html" />
+
+    <meta property="og:title" content="Tent Decor Expo UP 2025 Case Study | EllowDigital EMRS" />
+    <meta
+      property="og:description"
+      content="See how EMRS by EllowDigital delivered real-time registrations and secure entry for Tent Decor Expo UP 2025."
+    />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:url"
+      content="https://get-epass.netlify.app/case-study-tent-decor-expo.html"
+    />
+    <meta property="og:site_name" content="EMRS by EllowDigital" />
+    <meta property="og:locale" content="en_IN" />
+    <meta
+      property="og:image"
+      content="https://get-epass.netlify.app/assets/images/emrs-logo.png"
+    />
+    <meta property="og:image:alt" content="EllowDigital EMRS case study" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tent Decor Expo UP 2025 Case Study | EllowDigital EMRS" />
+    <meta
+      name="twitter:description"
+      content="See how EMRS by EllowDigital delivered real-time registrations and secure entry for Tent Decor Expo UP 2025."
+    />
+    <meta
+      name="twitter:image"
+      content="https://get-epass.netlify.app/assets/images/emrs-logo.png"
+    />
+    <meta name="twitter:image:alt" content="EllowDigital EMRS case study" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
+
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#0a2540" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="EMRS Case Study" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
 
     <link
       rel="preload"
