--- a/form.html
+++ b/form.html
@@ -12,20 +12,25 @@
   <meta name="keywords"
     content="EMRS, EllowDigital, event management, event registration system, e-pass generator, digital pass, attendee check-in" />
   <meta name="author" content="EllowDigital" />
-  <link rel="canonical" href="https://get-epass.netlify.app/" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://get-epass.netlify.app/form.html" />
 
   <meta property="og:title" content="EMRS by EllowDigital – Get Your E-Pass" />
   <meta property="og:description"
     content="Manage registrations and download personalized e-passes for any event using EMRS by EllowDigital." />
-  <meta property="og:image" content="https://get-epass.netlify.app/assets/unnamed.jpg" />
-  <meta property="og:url" content="https://get-epass.netlify.app/" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://get-epass.netlify.app/form.html" />
   <meta property="og:site_name" content="EMRS by EllowDigital" />
+  <meta property="og:locale" content="en_IN" />
+  <meta property="og:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta property="og:image:alt" content="Register for EMRS digital pass" />
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="EMRS by EllowDigital – Get Your E-Pass" />
   <meta name="twitter:description"
     content="Manage registrations and download personalized e-passes for any event using EMRS by EllowDigital." />
-  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/unnamed.jpg" />
+  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta name="twitter:image:alt" content="Register for EMRS digital pass" />
 
   <meta name="theme-color" content="#ffffff" />
   <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon" />
