--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,40 @@
       name="description"
       content="Browse EMRS registration, verification, and admin screenshots across devices."
     />
+    <meta
+      name="keywords"
+      content="EMRS gallery, EllowDigital showcase, event registration screenshots, product visuals"
+    />
     <meta name="author" content="EllowDigital" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://get-epass.netlify.app/gallery.html" />
+
+    <meta property="og:title" content="EMRS Product Gallery | EllowDigital" />
+    <meta
+      property="og:description"
+      content="Explore EMRS product experiences, user flows, and admin tools in action."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://get-epass.netlify.app/gallery.html" />
+    <meta property="og:site_name" content="EMRS by EllowDigital" />
+    <meta property="og:locale" content="en_IN" />
+    <meta
+      property="og:image"
+      content="https://get-epass.netlify.app/assets/images/emrs-logo.png"
+    />
+    <meta property="og:image:alt" content="EMRS product showcase" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="EMRS Product Gallery | EllowDigital" />
+    <meta
+      name="twitter:description"
+      content="Explore EMRS product experiences, user flows, and admin tools in action."
+    />
+    <meta
+      name="twitter:image"
+      content="https://get-epass.netlify.app/assets/images/emrs-logo.png"
+    />
+    <meta name="twitter:image:alt" content="EMRS product showcase" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +54,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="EMRS Verify" />
+  <meta name="apple-mobile-web-app-title" content="EMRS Gallery" />
     <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
     <link
       rel="icon"
