--- a/verify.html
+++ b/verify.html
@@ -6,18 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Verify EMRS e-passes quickly via QR scan or manual lookup." />
+  <meta name="keywords"
+    content="EMRS verification, EllowDigital pass checker, QR code scan, attendee lookup" />
   <meta name="author" content="EllowDigital" />
+  <meta name="robots" content="noindex, nofollow" />
   <title>Verify E-Pass – EMRS</title>
   <link rel="canonical" href="https://get-epass.netlify.app/verify.html" />
   <meta property="og:title" content="Verify EMRS Pass" />
   <meta property="og:description" content="Scan QR codes or search manually to verify EMRS attendees on the go." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://get-epass.netlify.app/verify.html" />
-  <meta property="og:image" content="https://get-epass.netlify.app/assets/favicon/android-chrome-512x512.png" />
+  <meta property="og:site_name" content="EMRS by EllowDigital" />
+  <meta property="og:locale" content="en_IN" />
+  <meta property="og:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta property="og:image:alt" content="Verify EMRS QR passes" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Verify EMRS Pass" />
   <meta name="twitter:description" content="Scan QR codes or search manually to verify EMRS attendees on the go." />
-  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/favicon/android-chrome-512x512.png" />
+  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta name="twitter:image:alt" content="Verify EMRS QR passes" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#0a2540" />
   <meta name="mobile-web-app-capable" content="yes" />
