--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
   <title>EMRS by EllowDigital | Launch-Ready Event Registration OS</title>
   <meta name="description"
     content="Reimagine guest journeys with EMRS by EllowDigital. Launch digital registrations, admin workflows, badge verification, and analytics in days." />
+  <meta name="keywords"
+    content="EMRS, EllowDigital, event registration software, visitor management, digital badges, QR pass verification" />
   <meta name="author" content="EllowDigital" />
-  <link rel="canonical" href="https://ellowdigital.netlify.app/" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://get-epass.netlify.app/" />
 
   <meta property="og:title" content="EMRS by EllowDigital" />
   <meta property="og:description"
     content="A complete event registration OS with cross-channel intake, digital pass automation, and real-time verification." />
-  <meta property="og:image" content="https://get-epass.netlify.app/assets/unnamed.jpg" />
-  <meta property="og:url" content="https://ellowdigital.netlify.app/" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://get-epass.netlify.app/" />
   <meta property="og:site_name" content="EMRS by EllowDigital" />
+  <meta property="og:locale" content="en_IN" />
+  <meta property="og:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta property="og:image:alt" content="EMRS by EllowDigital platform" />
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="EMRS by EllowDigital" />
   <meta name="twitter:description"
     content="Activate registrations, verifications, and analytics with EMRS by EllowDigital." />
-  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/unnamed.jpg" />
+  <meta name="twitter:image" content="https://get-epass.netlify.app/assets/images/emrs-logo.png" />
+  <meta name="twitter:image:alt" content="EMRS by EllowDigital platform" />
 
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
   <meta name="theme-color" content="#081423" media="(prefers-color-scheme: dark)" />
