--- a/verify.html
+++ b/verify.html
@@ -126,6 +126,8 @@
       position: absolute;
       inset: 0;
       display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
       align-items: center;
       justify-content: center;
       padding: 1.5rem;
@@ -137,6 +139,18 @@
       backdrop-filter: blur(6px);
       border-radius: 1rem;
       pointer-events: none;
+    }
+
+    .scanner-overlay-message button {
+      pointer-events: all;
+    }
+
+    .permission-error-ui {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.75rem;
+      text-align: center;
     }
 
     @keyframes sweep {
@@ -283,7 +297,20 @@
                 data-scan-container>
                 <div id="qr-reader" class="w-full aspect-square"></div>
                 <div id="scannerOverlayMessage" class="scanner-overlay-message">
-                  Camera is off. Sign in to start scanning.
+                  <span id="scannerOverlayText">Camera is off. Sign in to start scanning.</span>
+                  <div id="permissionErrorUI" class="hidden permission-error-ui text-slate-600">
+                    <h3 class="text-base font-semibold text-rose-600">
+                      Camera Permission Denied
+                    </h3>
+                    <p class="text-sm text-slate-500">
+                      Please allow camera access in your browser settings, then select retry below.
+                    </p>
+                    <button id="reloadPermissionBtn" type="button"
+                      class="inline-flex items-center gap-2 rounded-full bg-indigo-600 px-4 py-2 text-sm font-semibold text-white shadow transition hover:bg-indigo-700">
+                      <i class="fas fa-redo" aria-hidden="true"></i>
+                      Retry Permission
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
